--- a/src/Components/Loading/index.module.css
+++ b/src/Components/Loading/index.module.css
@@ -1,4 +1,4 @@
-.styleContainer {
+.loadingContainer {
   width: 100%;
   display: flex;
   align-items: center;
